# rmt-spca

./: AGENTS.md  Cargo.toml  LICENSE  README.md
benches/: pipeline.rs
docs/: testing.md
examples/: check_parallelism.rs  profile_pipeline.rs
scripts/: bench_python.py  generate_test_vectors.py
src/: biwhitening.rs  lib.rs  main.rs  markers.rs  rmt.rs  spca.rs  verification.rs
test_vectors/: bbp_alpha.json  bbp_overlap.json  biwhitening.json  mp_cdf.json  mp_median.json  mp_pdf.json  spiked_model.json
tests/: cross_validation.rs
